--- a/css/main.css
+++ b/css/main.css
@@ -58,8 +58,17 @@ main {
 
 .header_menu li {
   list-style: none;
-  margin-right: 30px; }
-
+  margin-right: 30px; 
+}
+.header_menu li a{
+  color:white;
+  text-decoration: none;
+}
+.header_menu li a:hover, .header_menu li a:active, .header_menu li a:focus{
+  color:#FE8B38;
+  font-weight: bold;
+  text-decoration: overline;
+}
 .header_mobile {
   display: none; }
 
@@ -174,7 +183,9 @@ h2 {
   display: block;
   color: #BBBBBB;
   font-family: 'Raleway', sans-serif;
-  width: 280px; }
+  width: 280px;
+  padding-left: 0;
+}
   .pricing_options-basic li,
   .pricing_options-enterprise li,
   .pricing_options-profesional li {
@@ -323,7 +334,11 @@ footer {
 
 @media screen and (max-width: 968px) {
   .hero_info {
-    width: 100%; } }
+    width: 100%; }
+    .pricing_options-profesional{
+      margin-top: 46px;
+    }
+  }
 
 @media screen and (max-width: 768px) {
   .hero_info {
@@ -335,7 +350,9 @@ footer {
 
 @media screen and (max-width: 610px) {
   .header {
-    height: 60px; }
+    height: 60px;
+    margin-left: 1rem;
+  }
   .hero_info {
     margin-left: 20px;
     bottom: 50px; }
@@ -356,13 +373,20 @@ footer {
   .header_menu {
     display: block; }
   .header_mobile {
-    display: block; }
+    display: block;
+    margin-left: 1rem;
+  }
   .header_menu.active1 {
     opacity: 1;
-    visibility: visible; }
+    visibility: visible;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
   .header_menu {
     opacity: 0;
-    visibility: hidden; } }
+    visibility: hidden;
+  }
+}
 
 @media screen and (max-width: 360px) {
   h1 {
